--- a/TPG_System_Professor/Views/cadUser.html
+++ b/TPG_System_Professor/Views/cadUser.html
@@ -11,18 +11,18 @@
         <div class="col-md-6 border border-3" style="border-color: #bcbcbc; border-top-right-radius: 20px; border-bottom-right-radius: 20px;">
             <div class="fw-bold text-center mt-5" style="font-size: 25px;">Entre na Plataforma</div>
             <div class="container d-flex justify-content-center">
-                <form action="" method="post" class="mt-4" style="width: 75%;">
+                <form action="{{url_for('caduser')}}" method="post" class="mt-4" style="width: 75%;">
                     <div class="mt-3">
                         <label class="form-label fw-bold">Nome:</label>
-                        <input type="email" name="name" class="form-control" placeholder="Digite seu nome"/>
+                        <input type="text" name="name" class="form-control" placeholder="Digite seu nome"/>
                     </div>
                     <div class="mt-3">
                         <label class="form-label fw-bold">Email:</label>
-                        <input type="email" name="email" class="form-control" placeholder="Digite seu email"/>
+                        <input type="email" name="eMail" class="form-control" placeholder="Digite seu email"/>
                     </div>
                     <div class="mt-3">
                         <label class="form-label fw-bold">Senha:</label>
-                        <input type="password" name="senha" class="form-control" placeholder="Digite sua senha">
+                        <input type="password" name="password" class="form-control" placeholder="Digite sua senha">
                     </div>
                     <div class="d-flex justify-content-center">
                         <input type="submit" value="Cadastrar" class="mt-5 btn text-white fw-bold" style="background-color: #5491C7; width: 190px;">
